--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,50 +1,55 @@
 <div class="row">
   <div class="col-md-4 offset-md-4">
-    <form action="" method="post">
+    <form action="/users/create" method="post" enctype="multipart/form-data">
+      <h1>Create your user profile</h1>
       <div class="form-group">
         <label for="firstname">Firstame</label>
-        <input type="text" class="form-control" id="firstname" placeholder="John">
+        <input name="firstname" type="text" class="form-control" id="firstname" placeholder="John" required>
       </div>
       <div class="form-group">
         <label for="lastname">Lastname</label>
-        <input type="text" class="form-control" id="lastname" placeholder=" Doe">
+        <input name="lastname" type="text" class="form-control" id="lastname" placeholder=" Doe" required>
       </div>
       <div class="form-group">
         <label for="inputCategory">Category</label>
-        <select id="inputCategory" class="form-control">
-          <option selected>Choose...</option>
-          <option>Reception</option>
-          <option>Cleaning</option>
+        <select name="category" id="inputCategory" class="form-control">
           <option>...</option>
+          <option value="bartender">Bar</option>
+          <option value="housekeeper">Housekeeping</option>
+          <option value="receptionist">Reception</option>
+          <option value="waiter">Waiter</option>
+          <option value="chef">Chef</option>
+          <option value="sommelier">Sommelier</option>
+          <option value="manager">Manager</option>
         </select>
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4">
+          <input name="email" type="email" class="form-control" id="inputEmail4">
         </div>
         <div class="form-group col-md-6">
           <label for="inputPassword4">Password</label>
-          <input type="password" class="form-control" id="inputPassword4">
+          <input name="password" type="password" class="form-control" id="inputPassword4">
         </div>
       </div>
       <div class="form-group">
         <label for="inputAddress">Address</label>
-        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+        <input name="streetname" type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity">
+          <input name="cityname" type="text" class="form-control" id="inputCity">
         </div>
 
         <div class="form-group col-md-6">
-          <label for="inputZip">Zip</label>
-          <input type="text" class="form-control" id="inputZip">
+          <label for="inputZip">Zip Code</label>
+          <input name="zipcode" type="text" class="form-control" id="inputZip">
         </div>
       </div>
 
-      <button type="submit" class="btn btn-primary">Sign in</button>
+      <button type="submit" class="btn btn-primary">Sign up</button>
     </form>
 
   </div>
