--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -17,6 +17,9 @@
                 <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/entreprises/signinEnt">Entreprise</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/signin">Log In</a>
             </li>
         </ul>
