build the user profile

--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -14,7 +14,8 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
-            <h6 id="emailHelp" class="form-text text-muted">You don't have an account yet? <a href="/signup" class="btn btn-primary"">Sign
+            <h6 id="emailHelp" class="form-text text-muted">You don't have an account yet? <a href="/auth/signup"
+                    class="btn btn-primary"">Sign
                     Up</a></h6>
 
         </form>
