--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
 
     <nav class="navbar">
         <a class="navbar-brand" href="/">
-            <img src="./../images/logo.png" width="100px" height="50px" class="d-inline-block align-top" alt=""
+            <img src="../../public/images/logo.png" width="100px" height="50px" class="d-inline-block align-top" alt=""
                 loading="lazy">
         </a>
 
@@ -17,7 +17,7 @@
                 <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/signin">Log In</a>
+                <a class="nav-link" href="/auth/signin">Log In</a>
             </li>
         </ul>
 
