--- a/views/entreprises/profil.hbs
+++ b/views/entreprises/profil.hbs
@@ -30,7 +30,7 @@
          <h3>{{address.zipcode}}</h3>
         </div>
       </div>
-      <h5 id="create-mission" class="form-text text-muted">Create a mission <a href="/entreprises/update/{{id}}" class="btn btn-primary"">Create a mission</a></h5>
+      <h5 id="create-mission" class="form-text text-muted">Create a mission <a href="/missions/create/{{id}}" class="btn btn-primary"">Create a mission</a></h5>
 
       <h6 id="emailHelp" class="form-text text-muted">If you want to update your profil <a href="/entreprises/update/{{id}}" class="btn btn-primary"">Update</a></h6>
     </form>
