--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -14,7 +14,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
-            <h6 id="emailHelp" class="form-text text-muted">You don't have an account yet? <a href="/auth/signup"
+            <h6 id="emailHelp" class="form-text text-muted">You don't have an account yet? <a href="/users/new/"
                     class="btn btn-primary"">Sign
                     Up</a></h6>
 
