--- a/views/entreprises/signupEnt.hbs
+++ b/views/entreprises/signupEnt.hbs
@@ -5,7 +5,7 @@
         <label for="name">name</label>
         <input type="text" name="name" class="form-control" id="name" placeholder="" value="Adidas">
       </div>
-      
+
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="email">Email</label>
@@ -18,7 +18,8 @@
       </div>
       <div class="form-group">
         <label for="address">Address</label>
-        <input type="text" name="street" class="form-control" id="address" placeholder="1234 Main St" value="116 rue des Moines">
+        <input type="text" name="street" class="form-control" id="address" placeholder="1234 Main St"
+          value="116 rue des Moines">
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
