--- a/views/entreprises/profil.hbs
+++ b/views/entreprises/profil.hbs
@@ -5,7 +5,7 @@
     
       <div class="form-group">
         
-      <h1>{{name}}</h1>
+      <h1>{{profil.name}}</h1>
       </div>
       
       <div class="form-row">
