--- a/views/missions/create.hbs
+++ b/views/missions/create.hbs
@@ -7,7 +7,7 @@
     </div>
 
     <div class="col-md-4 offset-md-4">
-        <form action="/missions/create" method="post">
+        <form action="/missions/create/{{idEntreprise}}" method="post">
             <div class="form-group">
                 <label for="inputCategory">Category</label>
                 <select name="category" id="inputCategory" class="form-control">
