--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
 
     <nav class="navbar">
         <a class="navbar-brand" href="/">
-            <img src="../../public/images/logo.png" width="100px" height="50px" class="d-inline-block align-top" alt=""
+            <img src="/images/logo.png" width="100px" height="50px" class="d-inline-block align-top" alt=""
                 >
         </a>
 
