--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,4 @@
-<div class="row">
+{{!-- <div class="row">
   <div class="col-md-4 offset-md-4">
     <form action="/users/new" method="post">
       <h1>Create your user profile</h1>
@@ -37,10 +37,67 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="inputCity">City</label>
-          <input name="cityname" type="text" class="form-control" id="inputCity" value="South Central">
+          <input name="city" type="text" class="form-control" id="inputCity" value="South Central">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputStreet">Street</label>
+          <input name="street" type="text" class="form-control" id="inputStreet" value="123 Main Street">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="inputZipCode">Zip Code</label>
+          <input name="zipcode" type="text" class="form-control" id="inputZipCode" value="123 Main Street">
         </div>
       </div>
       <button class="btn btn-primary">Sign up</button>
+    </form>
+
+  </div>
+</div> --}}
+
+
+<div class="row">
+  <div class="col-md-4 offset-md-4">
+    <form action="/users/new" method="post">
+      <div class="form-group">
+        <label for="firstname">First Name</label>
+        <input type="text" name="firstname" class="form-control" id="firstname" placeholder="" value="Chakib">
+      </div>
+      <div class="form-group">
+        <label for="lastname">Last Name</label>
+        <input type="text" name="lastname" class="form-control" id="lastname" placeholder="" value="Kibcha">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="email">Email</label>
+          <input type="email" name="email" class="form-control" id="email" value="adidas@adidas.com">
+        </div>
+        <div class="form-group col-md-6">
+          <label for="password">Password</label>
+          <input type="password" name="password" class="form-control" id="password" value="123">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="street">Street</label>
+        <input type="text" name="street" class="form-control" id="street" placeholder="1234 Main St"
+          value="112 Main Street">
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="city">City</label>
+          <input type="text" name="city" class="form-control" id="city" value="Paris">
+        </div>
+
+        <div class="form-group col-md-6">
+          <label for="zip">Zip</label>
+          <input type="text" name="zipcode" class="form-control" id="zip" value="75017">
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
 
   </div>
