--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -1,2 +1,7 @@
 <h1>hello {{user.firstname}} {{user.lastname}}</h1>
-<p>He</p>
+
+<p>You have {{user.missions.length}} missions</p>
+<p>Need extra money ? Find a new mission near {{user.address.city}}!</p>
+<button>Find missions</button> {{!-- TODO, show all missions --}}
+
+<a href="/users/update/{{user.id}}">Update your profile</a>
