--- a/views/entreprises/profil.hbs
+++ b/views/entreprises/profil.hbs
@@ -1,4 +1,4 @@
-<h1>{{profil.name}}</h1>
+
 
 <div class="row">
   <div class="col-md-4 offset-md-4">
@@ -11,29 +11,57 @@
       <div class="form-row">
         <div class="form-group col-md-6">
          
-         <h3>{{email}}</h3>
+         <h3>{{profil.email}}</h3>
         </div>
         
       </div>
       <div class="form-group">
         
-        <h3>{{address.street}}</h3>
+        <h3>{{profil.address.street}}</h3>
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
           
-        <h3>{{address.city}}</h3>
+        <h3>{{profil.address.city}}</h3>
         </div>
 
         <div class="form-group col-md-6">
          
-         <h3>{{address.zipcode}}</h3>
+         <h3>{{profil.address.zipcode}}</h3>
         </div>
       </div>
-      <h5 id="create-mission" class="form-text text-muted">Create a mission <a href="/missions/create/{{id}}" class="btn btn-primary"">Create a mission</a></h5>
+      <h5 id="create-mission" class="form-text text-muted">Create a mission <a href="/missions/create/{{profil.id}}" class="btn btn-primary"">Create a mission</a></h5>
 
-      <h6 id="emailHelp" class="form-text text-muted">If you want to update your profil <a href="/entreprises/update/{{id}}" class="btn btn-primary"">Update</a></h6>
+
+
+      <h6 id="emailHelp" class="form-text text-muted">If you want to update your profil <a href="/entreprises/update/{{profil.id}}" class="btn btn-primary"">Update</a></h6>
     </form>
+          <table class="table table-dark">
+  <thead>
+    <tr>
+      
+      <th scope="col">Category</th>
+      <th scope="col">From</th>
+      <th scope="col">To</th>
+      <th scope="col">Descrption</th>
+    </tr>
+  </thead>
+  {{#each missions}}
+  <tbody>
+    <tr>
+      
+      <td>{{this.category}}</td>
+      <td>{{format-date this.date_deb}}</td>
+      <td>{{format-date this.date_fin}}</td>
+      <td>{{this.description}}</td>
+      <td><a class="" href="/mission/{{this._id}}"><i class="fas fa-search"></i></a></td>
+      <td> <a class="fa fa-pen fa-lg" href="/mission/update/{{this._id}}"></a></td>
+      <td> <a class="" href="/mission/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a></td>
+      
+    </tr>
+      </tbody>
+      {{/each}}
+</table>
 
   </div>
 </div>
