--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -22,6 +22,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/signin">Log In</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" href="/entreprises/profilAll">Clients</a>
+            </li>
         </ul>
 
 
