--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,6 @@
 
 <h1 class="titre-index">Work when you want<br> Whenever you want</h1>
 
-<a class="btn-index" href="/missions">Discover our offers</a>
+<a class="btn-index" href="./missions/missionsAll">Discover our offers</a>
 </div>
 </div>
