--- a/views/entreprises/signupEnt.hbs
+++ b/views/entreprises/signupEnt.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4 offset-md-4">
-    <form action="/entreprises/signupEnt" method="post">
+    <form action="/entreprises/signup" method="post">
       <div class="form-group">
         <label for="name">name</label>
         <input type="text" name="name" class="form-control" id="name" placeholder="" value="Adidas">
