--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -2,8 +2,7 @@
 
     <nav class="navbar">
         <a class="navbar-brand" href="/">
-            <img src="/images/logo.png" width="100px" height="50px" class="d-inline-block align-top" alt=""
-                >
+            <img src="/images/logo.png" width="100px" height="50px" class="d-inline-block align-top" alt="">
         </a>
 
         <ul class="nav justify-content-end">
@@ -17,12 +16,12 @@
                 <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/entreprises/signinEnt">Entreprise</a>
+                <a class="nav-link" href="/entreprises/signin">Entreprise</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/signin">Log In</a>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="/entreprises/profilAll">Clients</a>
             </li>
         </ul>
