--- a/views/entreprises/signupEnt.hbs
+++ b/views/entreprises/signupEnt.hbs
@@ -3,13 +3,13 @@
     <form action="/entreprises/signupEnt" method="post">
       <div class="form-group">
         <label for="name">name</label>
-        <input type="text" name="name" class="form-control" id="name" placeholder="" value="Adidas">
+        <input type="text" name="name" class="form-control" id="name" placeholder="" value="Hotel Ibis">
       </div>
 
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="email">Email</label>
-          <input type="email" name="email" class="form-control" id="email" value="adidas@adidas.com">
+          <input type="email" name="email" class="form-control" id="email" value="rh@ibis.com">
         </div>
         <div class="form-group col-md-6">
           <label for="password">Password</label>
@@ -19,7 +19,7 @@
       <div class="form-group">
         <label for="address">Address</label>
         <input type="text" name="street" class="form-control" id="address" placeholder="1234 Main St"
-          value="116 rue des Moines">
+          value="92 rue de Rivoli">
       </div>
       <div class="form-row">
         <div class="form-group col-md-6">
@@ -29,7 +29,7 @@
 
         <div class="form-group col-md-6">
           <label for="zip">Zip</label>
-          <input type="text" name="zipcode" class="form-control" id="zip" value="75017">
+          <input type="text" name="zipcode" class="form-control" id="zip" value="75004">
         </div>
       </div>
 
