--- a/views/missions/create.hbs
+++ b/views/missions/create.hbs
@@ -27,7 +27,7 @@
                 <div class="form-group">
 
                     <label for="location">location</label>
-                    <input type="text" name="location" class="form-control" id="location" value="">
+                    <input type="text" name="location" class="form-control" id="location" value="Paris">
 
                 </div>
             </div>
@@ -47,7 +47,7 @@
 
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea class="form-control" name="description" id="description" rows="3"></textarea>
+                <textarea class="form-control" name="description" id="description" rows="3" ></textarea>
             </div>
 
 
