--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -25,6 +25,9 @@
              <li class="nav-item">
                 <a class="nav-link" href="/entreprises/profilAll">Clients</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/entreprises/logout">Log out</a>
+            </li>
         </ul>
 
 
