--- a/views/missions/oneMission.hbs
+++ b/views/missions/oneMission.hbs
@@ -1,7 +1,51 @@
-<h1>Mission detail</h1>
+<div class="row">
 
-<p>Category: {{missionDetail.category}}</p>
-<p>Description: {{missionDetail.description}}</p>
-<p>Location: {{missionDetail.location}}</p>
-<p>From: {{format-date missionDetail.date_deb}}</p>
-<p>To: {{format-date missionDetail.date_fin}}</p>
+    <div class="col-md-4 offset-md-4">
+
+        <div class="form-group">
+
+            <h1>Mission detail</h1>
+        </div>
+
+
+        <div class="form-group">
+            Job offer:
+
+            <h2>{{missionDetail.category}}</h2>
+        </div>
+
+        <div class="form-row">
+            <div class="form-group">
+                Description:
+
+                <h5>{{missionDetail.description}}</h5>
+            </div>
+
+        </div>
+        <div class="form-group">
+            Location:
+
+            <h3>{{missionDetail.location}}</h3>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                From:
+
+                <h3>{{format-date missionDetail.date_deb}}</h3>
+            </div>
+
+            <div class="form-group col-md-6">
+                To:
+
+                <h3>{{format-date missionDetail.date_fin}}</h3>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <h5 id="create-mission" class="form-text text-white">Create a mission <a
+                            href="mailto:nullepart@mozilla.org" class="btn btn-primary">Apply for
+                            this mission</a></h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
