--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -16,7 +16,7 @@
                 <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/entreprises/signin">Entreprise</a>
+                <a class="nav-link" href="/entreprises/signinEnt">Entreprise</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/signin">Log In</a>
