--- a/views/entreprises/signinEnt.hbs
+++ b/views/entreprises/signinEnt.hbs
@@ -2,10 +2,11 @@
     <div class="col-md-4 offset-md-4">
         <h1>Sign in</h1>
         <hr>
-        <form action="/entreprises/signin" method="POST">
+        <form action="/entreprises/signinEnt" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input name="email" type="email" class="form-control" id="exampleInputEmail1"
+                    aria-describedby="emailHelp">
 
             </div>
             <div class="form-group">
@@ -14,8 +15,8 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
-            <h6 id="emailHelp" class="form-text text-white">You don't have an account yet? <a href="/entreprises/signup"
-                    class="btn btn-primary"">Sign
+            <h6 id="emailHelp" class="form-text text-white">You don't have an account yet? <a
+                    href="/entreprises/signupEnt" class="btn btn-primary">Sign
                     Up</a></h6>
 
         </form>
