--- a/views/entreprises/profilAll.hbs
+++ b/views/entreprises/profilAll.hbs
@@ -22,7 +22,7 @@
                 <td>{{this.address.zipcode}}</td>
                 <td><a class="" href="/entreprises/profil/{{this._id}}"><i class="fas fa-search"></i></a></td>
                 <td> <a class="fa fa-pen fa-lg" href="/entreprises/update/{{this._id}}"></a></td>
-                <td> <a class="" href="/entreprises/deleteAdmin/{{this._id}}"><i class="fas fa-trash-alt"></i></a></td>
+                <td> <a class="" href="/entreprises/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a></td>
 
             </tr>
         </tbody>
