--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -21,9 +21,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="/signin">Log In</a>
             </li>
+            {{#if isAdmin}}
             <li class="nav-item">
                 <a class="nav-link" href="/entreprises/profilAll">Clients</a>
             </li>
+            {{/if}}
+
             <li class="nav-item">
                 <a class="nav-link" href="/entreprises/logout">Log out</a>
             </li>
