--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -2,15 +2,16 @@
     <div class="col-md-4 offset-md-4">
         <h1>Sign in</h1>
         <hr>
-        <form>
+        <form action="/users/signin" method="POST">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input name="email" type="email" class="form-control" id="exampleInputEmail1"
+                    aria-describedby="emailHelp">
 
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input name="password" type="password" class="form-control" id="exampleInputPassword1">
             </div>
 
             <button type="submit" class="btn btn-primary">Submit</button>
@@ -21,3 +22,5 @@
         </form>
     </div>
 </div>
+<h2>{{warning_msg}}</h2>
+<h1>{{error_msg}}</h1>
