--- a/views/missions/missionsAll.hbs
+++ b/views/missions/missionsAll.hbs
@@ -6,7 +6,7 @@
   <div class="card-body">
     <h5 class="card-title">{{category}} </h5>
     <p class="card-text">{{location}}</p>
-    <a href=".//{{id}}" class="btn btn-primary stretched-link">More..</a>
+    <a href="./{{id}}" class="btn btn-primary stretched-link">More..</a>
   </div>
 </div>
 {{/each}}
