--- a/views/missions/oneMission.hbs
+++ b/views/missions/oneMission.hbs
@@ -39,6 +39,7 @@
 
                 <h3>{{format-date missionDetail.date_fin}}</h3>
             </div>
+            {{#unless isEntreprise}}
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <h5 id="create-mission" class="form-text text-white">Create a mission <a
@@ -46,6 +47,7 @@
                             this mission</a></h5>
                 </div>
             </div>
+            {{/unless}}
         </div>
     </div>
 </div>
