--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -70,6 +70,19 @@
         <label for="lastname">Last Name</label>
         <input type="text" name="lastname" class="form-control" id="lastname" placeholder="" value="Kibcha">
       </div>
+      <div class="form-group">
+        <label for="inputCategory">Category</label>
+        <select name="category" id="inputCategory" class="form-control">
+          <option>...</option>
+          <option value="bartender">Bar</option>
+          <option value="housekeeper">Housekeeping</option>
+          <option value="receptionist">Reception</option>
+          <option value="waiter">Waiter</option>
+          <option value="chef">Chef</option>
+          <option value="sommelier">Sommelier</option>
+          <option value="manager">Manager</option>
+        </select>
+      </div>
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="email">Email</label>
