--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -14,7 +14,7 @@
                 <input name="password" type="password" class="form-control" id="exampleInputPassword1">
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Log in</button>
             <h6 id="emailHelp" class="form-text text-white">You don't have an account yet? <a href="/users/new/"
                     class="btn btn-primary"">Sign
                     Up</a></h6>
