--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -20,3 +20,5 @@
 
 <a href="/users/update/{{user.id}}">Update your profile</a>
 {{/if}}
+
+<img src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
