--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -22,11 +22,11 @@
             {{/if}}
             {{#unless isLoggedIn}}
             <li class="nav-item">
-                <a class="nav-link" href="/entreprises/signinEnt">Entreprise lOGIN</a>
+                <a class="nav-link" href="/entreprises/signinEnt">Hotel Log In</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="/signin">Log In</a>
+                <a class="nav-link" href="/signin">Candidate Log In</a>
             </li>
             {{/unless}}
             {{#if isAdmin}}
