--- a/views/entreprises/signupEnt.hbs
+++ b/views/entreprises/signupEnt.hbs
@@ -32,6 +32,9 @@
           <input type="text" name="zipcode" class="form-control" id="zip" value="75004">
         </div>
       </div>
+      <h6 style="color: red;">{{error_msg}}</h6>
+      <h6 style="color: green;">{{success_msg}}</h6>
+      
 
       <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
