--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -10,7 +10,7 @@
 </button>
 
 {{else}}
-<h1>hello {{user.firstname}} {{user.lastname}}</h1>
+<h1>Hello {{user.firstname}} {{user.lastname}}</h1>
 
 <p>You have {{user.missions.length}} missions</p>
 <p>Need extra money ? Find a new mission near {{user.address.city}}!</p>
