--- a/views/users/user-update.hbs
+++ b/views/users/user-update.hbs
@@ -52,7 +52,7 @@
 
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <form action="/users/new" method="post">
+        <form action="/users/update/{{userProfile.id}}" method="post">
             <div class="form-group">
                 <label for="firstname">First Name</label>
                 <input type="text" name="firstname" class="form-control" id="firstname" placeholder=""
