--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-4 offset-md-4">
-    <form action="/users/new" method="post">
+    <form action="/users/new" method="post" enctype="multipart/form-data">
       <div class="form-group">
         <label for="firstname">First Name</label>
         <input type="text" name="firstname" class="form-control" id="firstname" placeholder="" value="Chakib">
@@ -49,8 +49,13 @@
         </div>
       </div>
       <h6 style="color: red;">{{error_msg}}</h6>
-       <h6 style="color: green;">{{success_msg}}</h6>
-
+      <h6 style="color: green;">{{success_msg}}</h6>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="picture">Upload an image</label>
+          <input type="file" name="picture" id="picture" class="form-control">
+        </div>
+      </div>
 
       <button type="submit" class="btn btn-primary">Sign Up</button>
     </form>
