--- a/views/users/user-update.hbs
+++ b/views/users/user-update.hbs
@@ -43,7 +43,7 @@
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="picture">Upload an image</label>
-                    <input type="file" name="picture" id="picture" class="form-control">
+                    <input type="file" name="picture" id="picture" class="form-control" value="{{userProfile.picture}}">
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Update</button>
