--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -1,24 +1,113 @@
 {{#if isEntreprise}}
-<h1>Candidate: {{user.firstname}} {{user.lastname}}</h1>
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <div class="form-row">
+            <img class="picture" src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
+        </div>
+        <br>
+
+        <div class="form-group">
+            <h3>{{user.firstname}} {{user.lastname}}</h3>
+
+        </div>
+        <div class="form-group">
+            <p>This candidate has {{user.missions.length}} missions</p>
+
+        </div>
+        <div class="form-row">
+            <p>Role of the user: {{user.category}}</p>
+
+        </div>
+        <div class="form-group">
+            <p>City of candidate {{user.address.city}}!</p>
+
+        </div>
+
+        <div class="form-group">
+            <button class="btn btn-primary">
+                <a href="mailto:ineedajob@user.com">Contact the candidate</a>
+            </button>
+
+        </div>
+
+
+
+    </div>
+</div>
+
+
+
+{{!-- <h1>Candidate: {{user.firstname}} {{user.lastname}}</h1>
 <img src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
 <h2>Role of the user: {{user.category}}</h2>
 <p>The candidate has {{user.missions.length}} missions</p>
-<p>City of candidate {{user.address.city}}!</p>
+<p>City of candidate {{user.address.city}}!</p> --}}
 
-<button>
-    <a href="mailto:ineedajob@user.com">Contact the candidate</a>
-</button>
+
 
 {{else}}
-<h1>Hello {{user.firstname}} {{user.lastname}}</h1>
+
+<div class="row">
+    <div class="col-md-4 offset-md-4">
+        <div class="form-row">
+            <img src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
+        </div>
+        <br>
+
+        <div class="form-group">
+            <h3>Hello {{user.firstname}} {{user.lastname}}</h3>
+
+        </div>
+        <div class="form-group">
+            <p>You have {{user.missions.length}} missions</p>
+
+        </div>
+        <div class="form-row">
+            <div class="form-group">
+                <p>Need extra money ? Find a new mission near {{user.address.city}}!</p>
+            </div>
+            <div class="form-group col-md-6">
+                <button class="btn btn-primary">
+                    <a href="/missions/missionsAll">Find missions</a>
+                </button>
+            </div>
+        </div>
+        <div class="form-group">
+
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+
+            </div>
+
+            <div class="form-group col-md-6">
+                <a href="/users/update/{{user.id}}">Update your profile</a>
+
+            </div>
+        </div>
+
+
+
+
+    </div>
+</div>
+
+
+{{/if}}
+
+
+
+
+
+
+
+{{!-- <h1>Hello {{user.firstname}} {{user.lastname}}</h1>
+<img src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
 
 <p>You have {{user.missions.length}} missions</p>
 <p>Need extra money ? Find a new mission near {{user.address.city}}!</p>
 <button>
     <a href="/missions/missionsAll">Find missions</a>
-</button> {{!-- TODO, show all missions --}}
+</button> {{!-- TODO, show all missions 
 
-<a href="/users/update/{{user.id}}">Update your profile</a>
-{{/if}}
-
-<img src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
+<a href="/users/update/{{user.id}}">Update your profile</a> --}}
