--- a/views/missions/missionsAll.hbs
+++ b/views/missions/missionsAll.hbs
@@ -2,7 +2,7 @@
 <div class="container all-cards">
 {{#each allMissions}}
 <div class="card one-card" style="width: 18rem;">
-  <img src="/images/fakehotel.jpg" class="card-img-top" alt="...">
+  <img class="picture" src="/images/fakehotel.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{category}} </h5>
     <p class="card-text">{{location}}</p>
