--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -50,7 +50,7 @@
 <div class="row">
     <div class="col-md-4 offset-md-4">
         <div class="form-row">
-            <img src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
+            <img class="picture" src="{{user.picture}}" alt="Picture of {{user.firstname}} {{user.lastname}}">
         </div>
         <br>
 
