--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -34,6 +34,14 @@
                 <a class="nav-link" href="/entreprises/profilAll">Clients</a>
             </li>
             {{/if}}
+
+            {{#if isAdmin}}
+            <li class="nav-item">
+                <a class="nav-link" href="/users/profilAllUsers">Users</a>
+            </li>
+            {{/if}}
+
+
             {{#if isLoggedIn}}
             <li class="nav-item">
                 <a class="nav-link" href="/entreprises/logout">Log out</a>
