last last modifications

--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -71,26 +71,22 @@
                     <a href="/missions/missionsAll">Find missions</a>
                 </button>
             </div>
-        </div>
-        <div class="form-group">
-
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-6">
-
-            </div>
-
-            <div class="form-group col-md-6">
+            
+                
                 <a href="/users/update/{{user.id}}">Update your profile</a>
+                
+               
 
-            </div>
-        </div>
+        
+       
+        
+            <a href="/users/delete/{{user.id}}">Delete your account</a>
 
-
-
-
+     
     </div>
+
 </div>
+
 
 
 {{/if}}
