--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,10 +10,10 @@
                 <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">How it works</a>
+                <a class="nav-link" href="/howitworks">How it works</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
             </li>
             {{#if isEntreprise}}
             <li class="nav-item">
