last modfi du soir

--- a/views/users/user-profile.hbs
+++ b/views/users/user-profile.hbs
@@ -56,7 +56,7 @@
 
         <div class="form-group">
             <h3>Hello {{user.firstname}} {{user.lastname}}</h3>
-
+<p>Role of the user: {{user.category}}</p>
         </div>
         <div class="form-group">
             <p>You have {{user.missions.length}} missions</p>
