--- a/views/users/profilAllUsers.hbs
+++ b/views/users/profilAllUsers.hbs
@@ -22,7 +22,7 @@
                 <td>{{this.address.street}}, {{this.address.city}}, {{this.address.zipcode}}</td>
                 <td><a class="" href="/users/{{this._id}}"><i class="fas fa-search"></i></a></td>
                 <td> <a class="fa fa-pen fa-lg" href="/users/update/{{this._id}}"></a></td>
-                <td> <a class="" href="/users/delete/{{this._id}}"><i class="fas fa-trash-alt"></i></a></td>
+                <td> <a class="" href="/users/deleteAdmin/{{this._id}}"><i class="fas fa-trash-alt"></i></a></td>
 
             </tr>
         </tbody>
